--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "directus-init-tool",
   "version": "1.0.0",
-    "description": "",
-    "type": "module",
+  "description": "",
+  "type": "module",
   "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,11 +13,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/inquirer": "^9.0.3",
+    "@types/uuid": "^9.0.4",
     "typescript": "^5.2.2"
   },
   "dependencies": {
     "@directus/sdk": "^11.0.3",
     "@directus/types": "^10.1.5",
-    "inquirer": "^9.2.10"
+    "inquirer": "^9.2.10",
+    "uuid": "^9.0.1"
   }
 }
